--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-asgiref @ file:///tmp/build/80754af9/asgiref_1605055780383/work
-beautifulsoup4==4.9.3
-certifi==2020.12.5
+asgiref==3.3.1
+autopep8==1.5.4
 dj-database-url==0.5.0
 Django==3.1.5
 django-heroku==0.3.1
-django-livereload==1.7
-Faker==5.6.5
-Pillow==8.1.0
-psycopg2 @ file:///tmp/build/80754af9/psycopg2_1608147602433/work
-python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
+psycopg2==2.8.6
+pycodestyle==2.6.0
+pytz==2020.5
 six==1.15.0
-soupsieve==2.1
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
-text-unidecode==1.3
+sqlparse==0.4.1
+toml==0.10.2
 whitenoise==5.2.0
