--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond %{HTTP_HOST} ^domain.in [NC]
+RewriteCond %{HTTP_HOST} ^electricalfest.in [NC]
 RewriteRule ^(.*)$ https://www.electricalfest.in/$1 [L,R=301,NC]
