--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 asgiref==3.3.1
 autopep8==1.5.4
+defusedxml==0.7.1
+diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.1.5
-django-heroku==0.3.1
-gunicorn==20.0.4
-psycopg2==2.8.6
+django-import-export==2.5.0
+et-xmlfile==1.0.1
+MarkupPy==1.14
+odfpy==1.4.1
+openpyxl==3.0.7
 pycodestyle==2.6.0
 pytz==2020.5
+PyYAML==5.4.1
 six==1.15.0
 sqlparse==0.4.1
+tablib==3.0.0
 toml==0.10.2
 whitenoise==5.2.0
+xlrd==2.0.1
+xlwt==1.3.0
